Refactor project structure and enhance documentation for backend modules
- Updated the project structure to reflect a modular monolith architecture, moving backend components to the `backend/` directory and organizing core, simulation, and optimization modules.
- Enhanced documentation in `.cursorrules`, `CLAUDE.md`, and `README.md` to provide clearer descriptions of the architecture, key components, and development commands.
- Marked task MC-017 as completed in `tasks/simulation-backend.md`, indicating the establishment of the core module foundation for future development.

--- a/backend/.dockerignore
+++ b/backend/.dockerignore
@@ -7,5 +7,5 @@ env/
 venv/
 .git/
 # Ignore runtime-generated charts; they are not needed in the build context
-charts/*
+simulation/charts/*
 screenshots/
