--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -15,6 +15,7 @@ fastapi = "^0.116.1"
 uvicorn = "^0.35.0"
 seaborn = "^0.13.2"
 google-cloud-logging = "^3.12.1"
+cvxpy = "^1.7.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^25.1.0"
