--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -16,6 +16,8 @@ uvicorn = "^0.35.0"
 seaborn = "^0.13.2"
 google-cloud-logging = "^3.12.1"
 cvxpy = "^1.7.1"
+fredapi = "^0.5.2"
+python-dotenv = "^1.1.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^25.1.0"
