Update README and CI/CD setup for Quantitative Portfolio Platform
- Revised project description in `README.md` to reflect the transition from a Monte Carlo simulation focus to a comprehensive quantitative finance platform, highlighting new features like portfolio optimization and real-time WebSocket updates.
- Added `SETUP.md` for GitHub Actions configuration, detailing required secrets and pre-deployment setup for automated deployment to Google Cloud.
- Introduced `ci-cd.yml` for CI/CD pipeline, including backend and frontend testing, code quality checks, and automated deployment processes.
- Updated Dockerfile to utilize Poetry for dependency management and ensure proper installation of backend packages.
- Enhanced frontend components for improved user experience and integration with new backend features.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,20 +1,31 @@
-FROM python:3.11-slim
+FROM python:3.13-slim
 
 ENV PYTHONDONTWRITEBYTECODE=1 \
-    PYTHONUNBUFFERED=1
+    PYTHONUNBUFFERED=1 \
+    POETRY_NO_INTERACTION=1 \
+    POETRY_VENV_IN_PROJECT=1 \
+    POETRY_CACHE_DIR=/tmp/poetry_cache
 
 WORKDIR /app
 
-# Only curl for healthcheck; drop compilers to keep image small
+# Install system dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends curl \
   && rm -rf /var/lib/apt/lists/*
 
-# Leverage layer caching
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+# Install Poetry
+RUN pip install poetry==1.8.3
+
+# Copy dependency files
+COPY pyproject.toml poetry.lock ./
+
+# Install dependencies only first (for better caching)
+RUN poetry install --only=main --no-root && rm -rf $POETRY_CACHE_DIR
 
 # App code
 COPY . .
+
+# Install the backend package itself (core, simulation, optimization modules)
+RUN poetry install --only=main
 
 # Ensure charts directory exists for runtime-generated images
 RUN mkdir -p simulation/charts
@@ -31,4 +42,4 @@ HEALTHCHECK --interval=30s --timeout=5s --start-period=5s --retries=3 \
   CMD sh -c 'curl -fsS http://localhost:${PORT:-8000}/ || exit 1'
 
 # Use PORT if provided (Cloud Run), default to 8000 locally
-CMD ["sh", "-c", "uvicorn app:app --host 0.0.0.0 --port ${PORT:-8000}"]
+CMD ["sh", "-c", "poetry run uvicorn app:app --host 0.0.0.0 --port ${PORT:-8000}"]
